main/default/objects/pharos__Issue__c/fields/pharos__Analysis_Statuses_Details__c.field-meta.xml
<CustomField>
    <fullName>pharos__Analysis_Statuses_Details__c</fullName>
    <label>Analysis Statuses Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>