main/default/objects/pharos__Issue__c/fields/pharos__Assigned__c.field-meta.xml
<CustomField>
    <fullName>pharos__Assigned__c</fullName>
    <formula>NOT(ISBLANK(pharos__Bug_Tracker__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>