main/default/objects/pharos__Issue__c/fields/pharos__Average_Daily_Volume__c.field-meta.xml
<CustomField>
    <fullName>pharos__Average_Daily_Volume__c</fullName>
    <label>Average Daily Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>