main/default/objects/pharos__Issue__c/fields/pharos__Average_Frequency__c.field-meta.xml
<CustomField>
    <fullName>pharos__Average_Frequency__c</fullName>
    <label>Average Frequency (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>