main/default/objects/pharos__Issue__c/fields/pharos__Category__c.field-meta.xml
<CustomField>
    <fullName>pharos__Category__c</fullName>
    <formula>TEXT(pharos__Log__r.pharos__Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>