main/default/objects/pharos__Issue__c/fields/pharos__DevOps_Center_Metadata_Available__c.field-meta.xml
<CustomField>
    <fullName>pharos__DevOps_Center_Metadata_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DevOps Center Metadata Available</label>
    <type>Checkbox</type>
</CustomField>