main/default/objects/pharos__Issue__c/fields/pharos__Exception_Codes__c.field-meta.xml
<CustomField>
    <fullName>pharos__Exception_Codes__c</fullName>
    <label>Exception Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DYNAMIC VALUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>