main/default/objects/pharos__Issue__c/fields/pharos__Executable_Rules__c.field-meta.xml
<CustomField>
    <fullName>pharos__Executable_Rules__c</fullName>
    <label>Executable Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>