main/default/objects/pharos__Issue__c/fields/pharos__Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>pharos__Functional_Area__c</fullName>
    <formula>TEXT(pharos__Log__r.pharos__Area__c)</formula>
    <label>Functional Area</label>
    <type>Text</type>
</CustomField>