main/default/objects/pharos__Issue__c/fields/pharos__Impacted_Objects__c.field-meta.xml
<CustomField>
    <fullName>pharos__Impacted_Objects__c</fullName>
    <label>Impacted Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>