main/default/objects/pharos__Issue__c/fields/pharos__Impacted_Objects_by_Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Impacted_Objects_by_Type__c</fullName>
    <label>Impacted Objects by Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>