main/default/objects/pharos__Issue__c/fields/pharos__Impacted_Users__c.field-meta.xml
<CustomField>
    <fullName>pharos__Impacted_Users__c</fullName>
    <label>Impacted Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>