main/default/objects/pharos__Issue__c/fields/pharos__Issue_Analysis__c.field-meta.xml
<CustomField>
    <fullName>pharos__Issue_Analysis__c</fullName>
    <label>Issue Analysis</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>