main/default/objects/pharos__Issue__c/fields/pharos__Jira_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Jira_Integration_Status__c</fullName>
    <label>Jira Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>