main/default/objects/pharos__Issue__c/fields/pharos__Key__c.field-meta.xml
<CustomField>
    <fullName>pharos__Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>