main/default/objects/pharos__Issue__c/fields/pharos__Log_Count__c.field-meta.xml
<CustomField>
    <fullName>pharos__Log_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Log Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>