main/default/objects/pharos__Issue__c/fields/pharos__Override_Priority__c.field-meta.xml
<CustomField>
    <fullName>pharos__Override_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Priority</label>
    <type>Checkbox</type>
</CustomField>