main/default/objects/pharos__Issue__c/fields/pharos__Regression__c.field-meta.xml
<CustomField>
    <fullName>pharos__Regression__c</fullName>
    <formula>NOT(ISNULL(pharos__Regressed_On__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regression</label>
    <type>Checkbox</type>
</CustomField>