main/default/objects/pharos__Issue__c/fields/pharos__Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>pharos__Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Issue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>pharos__Issue__c.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pharos__Issue__c</referenceTo>
    <relationshipLabel>Related Issues</relationshipLabel>
    <relationshipName>Related_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>