main/default/objects/pharos__Issue__c/fields/pharos__Score__c.field-meta.xml
<CustomField>
    <fullName>pharos__Score__c</fullName>
    <formula>IF(pharos__Average_Frequency__c != 0,
MCEILING(SQRT(pharos__Impacted_Objects_Count__c*pharos__Impacted_Objects_Count__c + pharos__Impacted_Users_Count__c*pharos__Impacted_Users_Count__c +  pharos__Log_Count__c*pharos__Log_Count__c ) / pharos__Average_Frequency__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>