main/default/objects/pharos__Issue__c/fields/pharos__Source_Control_Metadata__c.field-meta.xml
<CustomField>
    <fullName>pharos__Source_Control_Metadata__c</fullName>
    <label>Source Control Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>