main/default/objects/pharos__Issue__c/fields/pharos__Users_Impacted__c.field-meta.xml
<CustomField>
    <fullName>pharos__Users_Impacted__c</fullName>
    <label>Users Impacted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>