main/default/objects/pharos__Issue__c/recordTypes/pharos__Duplicate.recordType-meta.xml
<RecordType>
    <fullName>pharos__Duplicate</fullName>
    <active>true</active>
    <label>Duplicate</label>
</RecordType>