main/default/objects/pharos__Issue__c/recordTypes/pharos__Issue.recordType-meta.xml
<RecordType>
    <fullName>pharos__Issue</fullName>
    <active>true</active>
    <label>Issue</label>
</RecordType>