main/default/objects/pharos__Issue__c/listViews/pharos__All.listView-meta.xml
<ListView>
    <fullName>pharos__All</fullName>
    <columns>NAME</columns>
    <columns>pharos__Category_Icon__c</columns>
    <columns>pharos__Organization_Name__c</columns>
    <columns>pharos__Summary__c</columns>
    <columns>pharos__Log_Count__c</columns>
    <columns>pharos__Functional_Area__c</columns>
    <columns>pharos__Impacted_Users_Count__c</columns>
    <columns>pharos__Impacted_Objects_Count__c</columns>
    <columns>pharos__Average_Frequency__c</columns>
    <columns>pharos__Priority__c</columns>
    <columns>pharos__Status__c</columns>
    <columns>pharos__First_Occurred_On__c</columns>
    <columns>pharos__Last_Occurred_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>